<resources>
    <string name="app_name">Orienteering</string>
    <string name="preference_name" translatable="false">Orienteering</string>

    <string name="title_activity_maps">Map</string>
    <string name="choose_username">Choose username</string>
    <string name="start">Start</string>
    <string name="create_game">Create Game</string>
    <string name="open_world">Open World</string>
    <string name="load_game">Load Game</string>
    <string name="name">Name</string>
    <string name="next">Continue</string>
    <string name="choose_subject">Choose subject</string>
    <string name="choose_level">Choose level</string>
    <string name="default_points">Include default points too?</string>
    <string name="show_defined_questions">Use already defined questions in the same category and level?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gametime">Gametime (Minutes)</string>
    <string name="new_code">Gamecode (Max. 10 Characters)</string>
    <string name="code">Gamecode</string>
    <string name="create_questions">Create Questions</string>
    <string name="create">Create</string>
    <string name="question">Question</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="answer_question">Answer</string>
    <string name="choose_answer">You have to choose an answer</string>
    <string name="plus_point">Points for a correct answer</string>
    <string name="minus_point">Missing points for a wrong answer</string>
    <string name="add_question_error">Everything have to be filled, to create a question</string>
    <string name="create_point_info">Press on the map to initialize a new point/move the current point.\nClick on Create Point when the point is ready\nTo clear a point, click it, and press the Clear Point button</string>
    <string name="create_point">Create Point</string>
    <string name="clear_point">Clear Point</string>
    <string name="create_point_error_no_point">Please press on the map and make a point before saving</string>
    <string name="create_point_success">Successfully added the point</string>
    <string name="create_point_error">Error, try saving the point again</string>
    <string name="remove_point_error_no_point">You have to select a point to delete it</string>
    <string name="remove_point_success">Successfully removed point</string>
    <string name="remove_point_error">Error, try to remove the point again</string>
    <string name="done">Done</string>

    <string-array name="subject_array">
        <item>Math</item>
        <item>Danish</item>
        <item>History</item>
        <item>Biology</item>
        <item>Geography</item>
    </string-array>

    <string name="http_url" translatable="false">http://85.233.225.116:8080/Orienteering/Api?</string>
</resources>