<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2"
            android:text="@string/create_point_info"/>
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="11"
            tools:context="orienteering.orienteering.CreateRoutePoints" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1.5"
            android:paddingTop="1dp">
            <RelativeLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rouded_button"
                    android:text="@string/create_point"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp"
                    android:layout_centerInParent="true"
                    android:onClick="saveMarker"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rouded_button"
                    android:text="@string/clear_point"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp"
                    android:layout_centerInParent="true"
                    android:onClick="removeMarker"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <Button
                    android:id="@+id/done"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rouded_button"
                    android:text="@string/done"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
