<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="orienteering.orienteering.MenuActivity"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <RadioButton
                android:text="@string/create_game"
                android:textColor="@color/colorWhite"
                android:buttonTint="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/create_game_radio"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:checked="true" />

            <RadioButton
                android:text="@string/open_world"
                android:textColor="@color/colorWhite"
                android:buttonTint="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/open_world_radio"
                android:textSize="30dp"
                android:layout_weight="0.26"
                android:layout_marginBottom="10dp" />

            <RadioButton
                android:text="@string/load_game"
                android:textColor="@color/colorWhite"
                android:buttonTint="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/get_game_radio"
                android:textSize="30dp"
                android:layout_marginBottom="10dp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/create_game_layout">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:hint="@string/name"
                android:textColorHint="@color/colorWhite"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:ems="10"
                android:id="@+id/create_game_edit_text"
                android:layout_below="@+id/radioGroup"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/open_world_game_layout"
            android:visibility="gone">

            <Spinner
                android:id="@+id/subject_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <SeekBar
                android:max="9"
                android:progress="5"
                android:progressDrawable="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seek_bar" />

            <TextView
                android:text="5"
                android:textAlignment="center"
                android:textSize="24dp"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seek_bar_text" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/load_game_layout"
            android:visibility="gone">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:hint="@string/code"
                android:textColorHint="@color/colorWhite"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:ems="10"
                android:id="@+id/load_game_edit_text"
                android:layout_below="@+id/radioGroup"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/next"
        android:textSize="26dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/rouded_button"
        android:textColor="#FFFFFF"
        android:id="@+id/get_game"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
